@@ -290,6 +290,9 @@ static int dblib_set_attr(pdo_dbh_t *dbh, zend_long attr, zval *val)
 		case PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS:
 			H->skip_empty_rowsets = zval_is_true(val);
 			return 1;
+		case PDO_DBLIB_ATTR_DATETIME_CONVERT:
+			H->datetime_convert = zval_get_long(val);
+			return 1;
 		default:
 			return 0;
 	}
@@ -319,6 +322,10 @@ static int dblib_get_attribute(pdo_dbh_t *dbh, zend_long attr, zval *return_valu
 
 		case PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS:
 			ZVAL_BOOL(return_value, H->skip_empty_rowsets);
+			break;
+
+		case PDO_DBLIB_ATTR_DATETIME_CONVERT:
+			ZVAL_BOOL(return_value, H->datetime_convert);
 			break;
 
 		default:
@@ -395,6 +402,7 @@ static int pdo_dblib_handle_factory(pdo_dbh_t *dbh, zval *driver_options)
 	H->assume_national_character_set_strings = 0;
 	H->stringify_uniqueidentifier = 0;
 	H->skip_empty_rowsets = 0;
+	H->datetime_convert = 0;
 
 	if (!H->login) {
 		goto cleanup;
@@ -418,6 +426,7 @@ static int pdo_dblib_handle_factory(pdo_dbh_t *dbh, zval *driver_options)
 		H->assume_national_character_set_strings = pdo_attr_lval(driver_options, PDO_ATTR_DEFAULT_STR_PARAM, 0) == PDO_PARAM_STR_NATL ? 1 : 0;
 		H->stringify_uniqueidentifier = pdo_attr_lval(driver_options, PDO_DBLIB_ATTR_STRINGIFY_UNIQUEIDENTIFIER, 0);
 		H->skip_empty_rowsets = pdo_attr_lval(driver_options, PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS, 0);
+		H->datetime_convert = pdo_attr_lval(driver_options, PDO_DBLIB_ATTR_DATETIME_CONVERT, 0);
 	}
 
 	DBERRHANDLE(H->login, (EHANDLEFUNC) pdo_dblib_error_handler);
