@@ -119,6 +119,7 @@ typedef struct {
 	unsigned assume_national_character_set_strings:1;
 	unsigned stringify_uniqueidentifier:1;
 	unsigned skip_empty_rowsets:1;
+	unsigned datetime_convert:1;
 } pdo_dblib_db_handle;
 
 typedef struct {
@@ -152,6 +153,7 @@ enum {
 	PDO_DBLIB_ATTR_STRINGIFY_UNIQUEIDENTIFIER,
 	PDO_DBLIB_ATTR_VERSION,
 	PDO_DBLIB_ATTR_SKIP_EMPTY_ROWSETS,
+	PDO_DBLIB_ATTR_DATETIME_CONVERT,
 };
 
 #endif
